# LapackWrapper

./: .gitignore  .gitmodules  .lapack_wrapper_config  .travis.yml  CMakeLists-blas-lapack.txt  CMakeLists-cflags.txt  CMakeLists.txt  CMakeUtilities.txt  Makefile_linux.mk  Makefile_mingw.mk  Makefile_osx.mk  README.md  Rakefile  Rakefile_common.rb  Rakefile_conf.rb  makefile  setup.rb  sub_branches.yaml
LapackWrapper/LapackWrapper.xcodeproj/: project.pbxproj
LapackWrapper/LapackWrapper.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
LapackWrapper/LapackWrapper.xcodeproj/xcshareddata/xcschemes/: test5-BLOCKTRID.xcscheme
Manual_doxygen/: Doxyfile  LW-LOGO.graffle  doxygenFilter.rb
ThirdParties/: CMakeLists-customize.txt  Rakefile
ThirdParties/OpenBlas/: Rakefile  build.sh  build_import_lib64.rb  readme.md
ThirdParties/OpenBlas/raspberry/include/: openblas_config.h
ThirdParties/OpenBlas/x64/: build_import_lib64.rb  openblas_x64.def  openblas_x64.exp  openblas_x64.lib  openblas_x64_auto.def  readme.md
ThirdParties/OpenBlas/x64/lib/: openblas_x64.lib
ThirdParties/OpenBlas/x64_FLANG/include/: openblas_config.h
ThirdParties/OpenBlas/x64_OMP/: build_import_lib64.rb  openblas_x64.exp  openblas_x64_auto.def
ThirdParties/OpenBlas/x64_OMP/include/: openblas_config.h
ThirdParties/OpenBlas/x86/: build_import_lib64.rb  build_import_lib86.rb  openblas_x86.exp  openblas_x86.lib  readme.md
ThirdParties/SuperLU/: CMakeLists.txt  Rakefile
Xcode/LapackWrapper.xcodeproj/: project.pbxproj
Xcode/LapackWrapper.xcodeproj/xcshareddata/xcschemes/: LapackWrapperLib.xcscheme  test.xcscheme  test1-smallfactorization.xcscheme  test2-timing.xcscheme  test3-banded-matrix.xcscheme  test4-BFGS.xcscheme  test5-BLOCKTRID.xcscheme  test6-EIGS.xcscheme  test7-SparseTool.xcscheme  test8-SparseToolComplex.xcscheme
cmake/: CMakeLists-blas-lapack.txt  CMakeLists-cflags.txt  CMakeLists-common.txt  CMakeLists-utilities.txt
docs_build/: Makefile  project_common.py  sparse_tool_doc.md
docs_build/sphinx/: author.rst  conf.py  filter_doxygen.rb  index.rst  references.rst  sparse_tool_doc.rst
docs_build/templates/: latex_headers.tex
lib/dll/: libHSL_x64.lib  libHSL_x86.lib  liblapack_wrapper_x64.lib  liblapack_wrapper_x64_debug.lib  liblapack_wrapper_x86.lib  liblapack_wrapper_x86_debug.lib
lib/lib/: liblapack_wrapper_x64_static.lib  liblapack_wrapper_x86_static.lib
lib3rd/lib/: README.md
license/: licence_BSD.txt
mm/: hor__131.mtx.gz.eps  plat1919.mtx.gz.eps
mmc/: readme.md
src/: TicToc.hh  lapack_wrapper++.cc  lapack_wrapper++.hh  lapack_wrapper.cc  lapack_wrapper.hh  lapack_wrapper_config.hh.tmpl  lapack_wrapper_eigen.hh  lapack_wrapper_libs.hh  lapack_wrapper_utils.hh
src/HSL/: hsl.h  hsl.hh  hsl_fake.cc  hsl_solver.cc  hsl_solver.hh  ma41_wrapper.cc  ma41_wrapper.hh  ma48_wrapper.cc  ma48_wrapper.hh  ma57_wrapper.cc  ma57_wrapper.hh
src/fmt/: format.cc  format.h  posix.cc
src/hqrrp/: NoFLA_HQRRP_WY_blk_var4.cc  NoFLA_HQRRP_WY_blk_var4.hh
src/lapack_wrapper/: TicToc.hh  general.hxx  lapack_wrapper++.cc  lapack_wrapper++.hh  lapack_wrapper.cc  lapack_wrapper.hh  lapack_wrapper_config.hh  lapack_wrapper_config.hh.tmpl  lapack_wrapper_eigen.hh  lapack_wrapper_tmpl.hh  lapack_wrapper_utils.cc  sparse.cxx  sparse.hxx  triangular.hxx  wrapper.cxx  wrapper.hxx
src/lapack_wrapper/HSL/: hsl.h  hsl_solver.hh  ma48_wrapper.cc  ma48_wrapper.hh  ma57_wrapper.cc  ma57_wrapper.hh
src/lapack_wrapper/code/: banded.hxx  blas.hxx  general.hxx  general_qr.hxx  rank_estimate.cxx  sparse.cxx  sparse.hxx  symmetric.hxx  triangular.hxx  tridiagonal.hxx  wrapper.cxx  wrapper.hxx
src/lapack_wrapper/code++/: band.cxx  band.hxx  block_trid.cxx  block_trid.hxx  eig.cxx  eig.hxx  ls.cxx  ls.hxx  lsc.cxx  lsc.hxx  lu.cxx  lu.hxx  pinv.cxx  pinv.hxx  qn.cxx  qn.hxx  qr.cxx  qr.hxx  svd.cxx  svd.hxx  trid.cxx  trid.hxx
src/openblas/x64/: cblas.h  f77blas.h  openblas_config.h
src/sparse_tool/: sparse_tool.hh  sparse_tool_extra.hh  sparse_tool_iterative.hh  sparse_tool_libs.hh  sparse_tool_matrix_market.hh
src/sparse_tool/interfaces/: MA41.cc  MA41.hh  MA48.cc  MA48.hh  MUMPS.hh  Pardiso.hh  SuperLU.hh  UMF.hh  mkl_pardiso.hh
src/sparse_tool/iterative/: bicgstab.hxx  cg.hxx  cg_poly.hxx  cocg.hxx  cocr.hxx  gmres.hxx
src/sparse_tool/preconditioner/: cssor.hxx  diag.hxx  hss_cgssor.hxx  hss_chebyshev.hxx  hss_ildu.hxx  hss_opoly.hxx  hss_opoly_ssor.hxx  hss_ssor.hxx  id.hxx  ildu.hxx  ilduk.hxx  jacobi.hxx  rildu.hxx  sor.hxx  ssor.hxx
src/zstream/: Readme.md  izstream.hh  izstream_impl.hh  ozstream.hh  ozstream_impl.hh
src_tests/: test1-small-factorization.cc  test10-SparseToolTiming.cc  test11-SparseToolVector.cc  test12-SparseToolMatrix.cc  test13-SparseTool1.cc  test14-SparseTool2.cc  test15-LapackWrapper-regressions.cc  test16-LapackWrapper-coverage.cc  test17-LapackWrapper-extra-coverage.cc  test18-LapackWrapper-banded-block-coverage.cc  test2-Timing.cc  test3-BandedMatrix.cc  test4-BFGS.cc  test5-BLOCKTRID.cc  test6-EIGS.cc  test7-SparseTool.cc  test8-SparseToolComplex.cc  test9-SparseToolTridiagonal.cc  testXX-RRQR.NO_cc
src_tests/paper/: test.MA41.cc  test.SLU.cc  test.UMF.cc  test.mm.cc  test.paper.spy.cc  test.performance.cc
submodules/: Rakefile
third_parties/: Rakefile  common.rb
third_parties/Eigen/: Rakefile
third_parties/OpenBlas/: Rakefile  build.bat  build.sh  build_import_lib32.rb  build_import_lib64.rb
third_parties/OpenBlas/arm64_cortexa57/include/: openblas_config.h
third_parties/OpenBlas/x64/: readme.md
third_parties/OpenBlas/x64/dll/: libopenblas_x64.exp  libopenblas_x64.lib
third_parties/OpenBlas/x64/include/: openblas_config.h
third_parties/OpenBlas/x64/lib/: libopenblas_x64.exp  libopenblas_x64.lib
third_parties/OpenBlas/x86/: readme.md
third_parties/OpenBlas/x86/dll/: libopenblas_x86.exp  libopenblas_x86.lib
third_parties/SuperLU/: .gitignore  CMakeLists.txt  README.md  Rakefile
third_parties/backward-cpp/: Rakefile
third_parties/fmt/: Rakefile
third_parties/libfort/: Rakefile
third_parties/rang/: README.md  Rakefile
(+9 files in other folders)
